<resources>

	<string name="app_name">Smash Bros - Ultimate</string>

	<!-- <editor-fold defaultstate="Collapsed" desc="Onboarding" -->
	<string name="content_description_onboarding_continue_fab">Continue</string>

	<!-- <editor-fold defaultstate="Collapsed" desc="Pages" -->
	<string name="text_onboarding_page1">Access our\nExtended Catalog</string>
	<string name="text_onboarding_page2">Filter Fighters</string>
	<string name="text_onboarding_page3">And More…</string>
	<!-- </editor-fold> -->

	<!-- </editor-fold> -->

	<!-- <editor-fold defaultstate="Collapsed" desc="Home" -->
	<string name="home_toolbar_title">Fighters</string>
	<string name="home_menu_action_filter">Filter</string>
	<string name="text_all">All</string>
	<string name="generic_error">Something went wrong!\nPlease, try again later.</string>
	<string name="content_description_no_results">No results</string>

	<!-- <editor-fold defaultstate="Collapsed" desc="Fighter" -->
	<string name="text_fighter_price">Price: $%1$s</string>
	<string name="text_fighter_rate">Rate: %1$d</string>
	<string name="text_fighter_downloads">Downloads: %1$s</string>
	<!-- </editor-fold> -->
	<!-- </editor-fold> -->

	<!-- <editor-fold defaultstate="Collapsed" desc="Fighter detail" -->
	<string name="fighter_detail_toolbar_title">Details</string>
	<string name="content_description_fighter_detail_avatar">Fighter\'s avatar image</string>
	<!-- </editor-fold> -->

	<!-- <editor-fold defaultstate="Collapsed" desc="Fighter filter" -->
	<string name="fighter_filter_toolbar_title">Filter</string>
	<string name="fighter_filter_radiobutton_name">Name</string>
	<string name="fighter_filter_radiobutton_price">Price</string>
	<string name="fighter_filter_radiobutton_rate">Rate</string>
	<string name="fighter_filter_radiobutton_downloads">Downloads</string>
	<!-- </editor-fold> -->

</resources>