<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/navigation_home"
	app:startDestination="@id/homeFragment">

	<fragment
		android:id="@+id/homeFragment"
		android:name="quevedo.soares.leandro.techtest.view.home.HomeFragment"
		android:label="@string/home_toolbar_title"
		tools:layout="@layout/fragment_home">

		<action
			android:id="@+id/action_homeFragment_to_fighterDetailFragment"
			app:destination="@id/fighterDetailFragment"
			app:enterAnim="@anim/anim_fade_in"
			app:exitAnim="@anim/anim_fade_out"
			app:popEnterAnim="@anim/anim_fade_in"
			app:popExitAnim="@anim/anim_fade_out" />

		<action
			android:id="@+id/action_homeFragment_to_fighterFilterFragment"
			app:destination="@id/fighterFilterFragment" />

	</fragment>

	<fragment
		android:id="@+id/fighterDetailFragment"
		android:name="quevedo.soares.leandro.techtest.view.fighterdetail.FighterDetailFragment"
		android:label="@string/fighter_detail_toolbar_title"
		tools:layout="@layout/fragment_fighter_detail">

		<argument
			android:name="fighter"
			app:argType="quevedo.soares.leandro.techtest.domain.model.Fighter"
			app:nullable="false" />

	</fragment>

	<fragment
		android:id="@+id/fighterFilterFragment"
		android:name="quevedo.soares.leandro.techtest.view.fighterfilter.FighterFilterFragment"
		android:label="@string/home_menu_action_filter"
		tools:layout="@layout/fragment_fighter_filter" />

</navigation>