<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/light_background"
	tools:context=".view.fighterfilter.FighterFilterFragment">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/appBarLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:elevation="20dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:liftOnScroll="false">

		<com.google.android.material.appbar.MaterialToolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="?colorPrimary"
			android:theme="@style/Theme.App.Toolbar"
			app:title="@string/fighter_filter_toolbar_title"
			app:titleTextAppearance="@style/Theme.App"
			app:titleTextColor="@color/white">

		</com.google.android.material.appbar.MaterialToolbar>

	</com.google.android.material.appbar.AppBarLayout>

	<androidx.cardview.widget.CardView
		android:id="@+id/cardViewSortBy"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:contentPaddingLeft="20dp"
		app:contentPaddingTop="20dp"
		app:layout_constraintTop_toBottomOf="@id/appBarLayout">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:alpha="0.3"
			android:text="Sort by"
			android:textColor="@color/black"
			android:textStyle="bold" />

		<RadioGroup
			android:id="@+id/radioGroup"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp">

			<com.google.android.material.radiobutton.MaterialRadioButton
				android:layout_width="match_parent"
				android:id="@+id/radioButtonName"
				tools:checked="true"
				android:layout_height="wrap_content"
				android:padding="20dp"
				android:text="@string/fighter_filter_radiobutton_name" />

			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_marginStart="20dp"
				android:background="@color/divider_gray" />

			<com.google.android.material.radiobutton.MaterialRadioButton
				android:layout_width="match_parent"
				android:id="@+id/radioButtonPrice"
				android:layout_height="wrap_content"
				android:padding="20dp"
				android:text="@string/fighter_filter_radiobutton_price" />

			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_marginStart="20dp"
				android:background="@color/divider_gray" />

			<com.google.android.material.radiobutton.MaterialRadioButton
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="20dp"
				android:id="@+id/radioButtonRate"
				android:text="@string/fighter_filter_radiobutton_rate" />

			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_marginStart="20dp"
				android:background="@color/divider_gray" />

			<com.google.android.material.radiobutton.MaterialRadioButton
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/radioButtonDownloads"
				android:padding="20dp"
				android:text="@string/fighter_filter_radiobutton_downloads" />

		</RadioGroup>

	</androidx.cardview.widget.CardView>

	<androidx.cardview.widget.CardView
		android:id="@+id/cardViewFilterBy"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		app:contentPadding="20dp"
		app:layout_constraintTop_toBottomOf="@id/cardViewSortBy">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:alpha="0.3"
			android:text="Filter by"
			android:textColor="@color/black"
			android:textStyle="bold" />

		<quevedo.soares.leandro.techtest.view.widget.RatingBar
			android:layout_marginTop="20dp"
			app:colorActive="@color/star_active"
			app:colorInactive="@color/star_inactive"
			app:starPaddingHorizontal="20dp"
			android:id="@+id/ratingBar"
			app:starPaddingVertical="10dp"
			android:layout_width="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_height="70dp" />

	</androidx.cardview.widget.CardView>

	<Button
		android:id="@+id/buttonReset"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="5dp"
		android:layout_marginBottom="20dp"
		style="@style/Theme.App.Button"
		android:text="Reset"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@id/buttonApply"
		app:layout_constraintStart_toStartOf="parent" />

	<Button
		android:id="@+id/buttonApply"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="5dp"
		android:layout_marginEnd="20dp"
		android:layout_marginBottom="20dp"
		style="@style/Theme.App.Button"
		android:text="Apply"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@id/buttonReset" />

</androidx.constraintlayout.widget.ConstraintLayout>